--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ pylint = "==2.14.5"
 pycodestyle = "==2.8.0"
 
 [scripts]
-lint = "pylint configure-repositories"
+lint = "pylint configure_repositories"
 codestyle = "pycodestyle . --show-source --show-pep8 --max-line-length=120"
 
 [requires]
