Remove `Release` prefix

--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -30,7 +30,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref_name }}
-          name: Release ${{ github.ref_name }}
+          name: ${{ github.ref_name }}
           draft: false
           prerelease: false
           files: ${{ github.workspace }}/dist/configure_repositories_linux_x86
