--- a/Pipfile
+++ b/Pipfile
@@ -8,14 +8,15 @@ click = "==8.1.6"
 
 [dev-packages]
 pylint = "==2.17.5"
-pycodestyle = "==2.11.0"
+black = "==23.7.0"
 pyinstaller = "==5.13.0"
 pywin32-ctypes = "==0.2.2"
 pefile = "==2023.2.7"
 
 [scripts]
 lint = "pylint configure_repositories"
-codestyle = "pycodestyle . --show-source --show-pep8 --max-line-length=120"
+format = "black ."
+format_check = "black . --check"
 build_linux_x86 = "pyinstaller --target-architecture x86_64 --onefile --add-data files/scripts/mysql/:files/scripts/mysql/ --clean --name configure_repositories_linux_x86 configure_repositories.py"
 build_darwin_x86 = "pyinstaller --target-architecture x86_64 --onefile --add-data files/scripts/mysql/:files/scripts/mysql/ --clean --name configure_repositories_darwin_x86 configure_repositories.py"
 build_darwin_arm64 = "pyinstaller --target-architecture arm64 --onefile --add-data files/scripts/mysql/:files/scripts/mysql/ --clean --name configure_repositories_darwin_arm64 configure_repositories.py"
