feat: Remove `--check-cache` in `setup-node`

--- a/actions/setup-node/action.yml
+++ b/actions/setup-node/action.yml
@@ -5,6 +5,5 @@ runs:
     - uses: actions/setup-node@v3
       with:
         node-version-file: .tool-versions
-        cache: yarn
-    - run: yarn --immutable --immutable-cache --check-cache
+    - run: yarn --immutable --immutable-cache
       shell: bash
